cmake_minimum_required(VERSION 3.21)
project(extra C)

set(CMAKE_C_STANDARD 99)

add_executable(extra main.c 1018.c)

add_executable(main main.c)
add_executable(1018 1018.c)
add_executable(1181 1181.c)
add_executable(11650 11650.c)
add_executable(StackNQueue StackNQueue.c)
add_executable(10826 10826.c)
add_executable(10845 10845.c)
add_executable(10866 10866.c)
add_executable(11866 11866.c)