cmake_minimum_required(VERSION 3.21)
project(extra C)

set(CMAKE_C_STANDARD 99)

add_executable(extra main.c 1018.c)

add_executable(main main.c)
#add_executable(1018 1018.c)
#add_executable(1181 1181.c)
#add_executable(11650 11650.c)
#add_executable(StackNQueue StackNQueue.c)
#add_executable(10826 10826.c)
#add_executable(10845 10845.c)
#add_executable(10866 10866.c)
#add_executable(11866 11866.c)
#add_executable(10989 10989.c)
#add_executable(15829 15829.c)
#add_executable(1436 1436.c)
#add_executable(11651 11651.c)
#add_executable(7568 7568.c)
add_executable(1205 1205.c)
add_executable(1059 1059.c)
add_executable(4949 4949.c)